po: update po/cy_GB/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/cy_GB/mailing.po
+++ b/po/cy_GB/mailing.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-23 17:45+0000\n"
+"PO-Revision-Date: 2017-02-02 13:47+0000\n"
 "Last-Translator: Robin Farrar <hogyndrwg@gmail.com>\n"
 "Language-Team: Welsh (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/cy_GB/)\n"
 "MIME-Version: 1.0\n"
@@ -976,193 +976,193 @@ msgstr "Yn ôl i CiviMail"
 
 #: CRM/Mailing/Page/Report.php
 msgid "CiviMail Report: %1"
-msgstr ""
+msgstr "Adroddiad CiviMail: %1"
 
 #: CRM/Mailing/Page/Tab.php
 msgid "Mailings sent to %1"
-msgstr ""
+msgstr "Postiadau a anfonwyd at %1"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Draft"
-msgstr ""
+msgstr "Drafft"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Testing"
-msgstr ""
+msgstr "Profi"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/EditCtrl/report.html
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/services.js
 msgid "Final"
-msgstr ""
+msgstr "Terfynnol"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Test different \"Subject\" lines"
-msgstr ""
+msgstr "Profi \"Penawdau\" gwahanol"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Test different \"From\" lines"
-msgstr ""
+msgstr "Profi llinellau \"O\" gwahanol"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Test entirely different emails"
-msgstr ""
+msgstr "Profi ebyst gwbl wahanol"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Total Unique Clicks"
-msgstr ""
+msgstr "Cyfanswm Cliciadau Unigryw"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Total Clicks on a particular link"
-msgstr ""
+msgstr "Cyfanswm Cliciadau ar ddolen arbennig"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Standalone"
-msgstr ""
+msgstr "Sefyll ar ei ben ei hun"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Experimental"
-msgstr ""
+msgstr "Arbrofol"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Winner"
-msgstr ""
+msgstr "Enillydd"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Successful "
-msgstr ""
+msgstr "Llwyddiannus"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Bounced "
-msgstr ""
+msgstr "Wedi Bownsio"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Opened "
-msgstr ""
+msgstr "Wedi ei agor"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Unopened/Hidden "
-msgstr ""
+msgstr "Heb ei hagor/Cuddiedig"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Clicked "
-msgstr ""
+msgstr "Wedi ei chlicio"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Not Clicked "
-msgstr ""
+msgstr "Heb ei chlicio"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Replied "
-msgstr ""
+msgstr "Wedi ymateb"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "No Reply "
-msgstr ""
+msgstr "Dim Ymateb"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Mailings %%StatusMessage%%"
-msgstr ""
+msgstr "Postiadau %%StatusMessage%%"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Sent By"
-msgstr ""
+msgstr "Anfonwyd Gan"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Are you sure you want to cancel this mailing?"
-msgstr ""
+msgstr "Ydych yn sicr eich bod am ganslo anfon y neges?"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Are you sure you want to delete this mailing?"
-msgstr ""
+msgstr "Ydych yn siwr eich bod am ddileu'r neges?"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Are you sure you want to archive this mailing?"
-msgstr ""
+msgstr "Ydych yn siwr eich bod am archifio'r neges?"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Approve/Reject"
-msgstr ""
+msgstr "Cymeradwyo/Gwrthod"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Re-Use"
-msgstr ""
+msgstr "Ail-ddefnyddio"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Re-Send Mailing"
-msgstr ""
+msgstr "Ail-anfon y Neges"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Continue Mailing"
-msgstr ""
+msgstr "Parhau i bostio"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Archive"
-msgstr ""
+msgstr "Archifio"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "CiviMail Mailings"
-msgstr ""
+msgstr "Postiadau CiviMail"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "%1 %%StatusMessage%%"
-msgstr ""
+msgstr "%1 %%StatusMessage%%"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Forwarded Email"
-msgstr ""
+msgstr "Ebost wedi ei Anfon Ymlaen"
 
 #: CRM/Mailing/Selector/Event.php ang/crmMailing/services.js
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Successful Deliveries"
-msgstr ""
+msgstr "Wedi Cyrraedd yn Llwyddiannus"
 
 #: CRM/Mailing/Selector/Event.php ang/crmMailing/services.js
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Bounces"
-msgstr ""
+msgstr "Wedi Bownsio"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Unique Replies"
-msgstr ""
+msgstr "Ymatebion Unigryw"
 
 #: CRM/Mailing/Selector/Event.php ang/crmMailing/services.js
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Replies"
-msgstr ""
+msgstr "Ymatebion"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Unique Click-throughs"
-msgstr ""
+msgstr "Cliciadau-drwodd Unigryw"
 
 #: CRM/Mailing/Selector/Event.php ang/crmMailing/services.js
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Click-throughs"
-msgstr ""
+msgstr "Cliciadau-drwodd"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Unique Tracked Opens"
-msgstr ""
+msgstr "Wedi Agor a'u Tracio'n Unigryw"
 
 #: CRM/Mailing/Selector/Event.php ang/crmMailing/services.js
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Tracked Opens"
-msgstr ""
+msgstr "Wedi Agor a'u Tracio"
 
 #: CRM/Mailing/Selector/Search.php templates/CRM/Mailing/Form/Task/Print.tpl
 msgid "Completed Date"
-msgstr ""
+msgstr "Dyddiad Cwblhau"
 
 #: CRM/Mailing/Selector/Search.php
 msgid "CiviCRM Mailing Search"
-msgstr ""
+msgstr "Chwiliad Postiad CiviCRM"
 
 #: ang/crmMailing/BlockApprove.html
 msgid "Unreviewed"
-msgstr ""
+msgstr "Heb eu hadolygu"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Save As"
-msgstr ""
+msgstr "Cadw Fel"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Email address"
