--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -9,7 +9,7 @@
 # lavamind <jerome@riseup.net>, 2011
 # lavamind <jerome@riseup.net>, 2011
 # Mathieu B <mathieu@brab.ca>, 2017
-# Mathieu Lu <mathieu@bidon.ca>, 2016
+# Mathieu Lu <mathieu@bidon.ca>, 2016-2017
 # Mathieu Lu <mathieu@bidon.ca>, 2011,2013-2016
 # Paul Tibere <paul@koumbit.org>, 2013
 # Paul Tibere <paul@koumbit.org>, 2013
@@ -29,8 +29,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-02 02:23+0000\n"
-"Last-Translator: Mathieu B <mathieu@brab.ca>\n"
+"PO-Revision-Date: 2017-02-03 01:22+0000\n"
+"Last-Translator: Mathieu Lu <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20283,7 +20283,7 @@ msgstr "est disponible pour téléchargement"
 #: templates/CRM/common/footer.tpl
 msgid ""
 "CiviCRM is openly available under the <a href='%1'>GNU AGPL License</a>."
-msgstr "CiviCRM est ouvertement disponible sous la <a href='%1'> GNU AGPL Licence </a>."
+msgstr "CiviCRM est librement disponible sous la licence <a href='%1'>GNU AGPL</a>."
 
 #: templates/CRM/common/footer.tpl
 msgid "Download CiviCRM."
