--- a/po/fr_FR/mailing.po
+++ b/po/fr_FR/mailing.po
@@ -28,8 +28,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-21 09:51+0000\n"
-"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
+"PO-Revision-Date: 2017-02-02 16:21+0000\n"
+"Last-Translator: Brodziak jean jacques <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
