po: update po/sr_RS@latin/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/event.po
+++ b/po/sr_RS@latin/event.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-01 15:55+0000\n"
+"PO-Revision-Date: 2017-02-02 15:50+0000\n"
 "Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -2073,7 +2073,7 @@ msgid ""
 "they register online. If using a price set below note that the contribution "
 "record will have this financial type, however line items will be processed "
 "using the actual financial type selected for the price set item."
-msgstr ""
+msgstr "Ovaj finansijski tip će biti dodeljen za plaćanja koja su učesnici izvršili prilikom online registracije. Ukoliko koristite set centa koji se nalazi ispod, uzmite u obzir da će zapis o donaciji imati ovaj finansijski tip, ali će pojedinačne stavke zapravo biti obrađivane uz pomoć finansijskog tipa koji je odabran za stavku set cena."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -2081,7 +2081,7 @@ msgid ""
 "you to meet the complex demands of your event registration structure.(e.g. "
 "\"Pay $15 more for lunch.\"). Click <a href='%1'>here</a> if you want to "
 "configure price sets for your site."
-msgstr ""
+msgstr "Nijedan Set cena nije konfigurisan/omogućen za vaš sajt. Setovi cena vam omogućuje da ispunite složene zahteve vaše strukture za registraciju za događaj. <a href='%1'>ovde</a> ukoliko želite da biste konfigurisali setove cena za vaš sajt."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -2102,7 +2102,7 @@ msgid ""
 " Both the label and dollar amount will be displayed. You can also configure "
 "one or more sets of discounted fees by checking \"Discounts by Signup Date\""
 " below."
-msgstr ""
+msgstr "Upotrebite tabelu ispod da biste uneli opisne oznake i sume za do deset nivoa kotizacija za događaj. Onie će biti prikazani u vidu liste na kojoj se može izabrati samo jedna opcija.  Takođe možete konfigurisati jedan ili više setova sniženih cena tako što ćete štiklirati opciju ispod \"Popusti prema datumu prijavljivanja\"."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -2179,7 +2179,7 @@ msgid ""
 " must first enable the Participant Statuses used by the approval work-flow "
 "(Administer » CiviEvent » Participant Statuses). Then reload this form and "
 "check 'Require participant approval?'."
-msgstr ""
+msgstr "Možete podesiti događaje da zahtevaju odobrenje administratora pre nego što učesnik završi proces registracije. Da biste omoćućili ovu opciju morate prvo aktivirati Statuse učesnika koji se koriste u procesu rada odobravanja (Administriraj » CiviEvent » Statusi učesnika). Zatim ponovo učitajte ovaj formular i štiklirajte 'Traži potvrdu učesnika?'."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -2190,7 +2190,7 @@ msgid ""
 "may also need to collect additional information specific to a person's "
 "<strong>participation</strong> in an Event. Examples include meal and/or "
 "volunteer preferences."
-msgstr ""
+msgstr "Ukoliko želite da prikupite dodatne informacije u toku registracije za događaj, treba da konfigurišete jedan ili više CiviCRM profila - koji su grupa standardnih i sopstvenih polja. Za registraciju za događaj ćete ćete najčešće želeti da prikupite email adresu i/ili ime i prezime učesnika. Takođe, možda će vam biti potrebne dodatne informacije koje su specifične za <strong>Učešće</strong> osobe na Događaju. Primeri su izbor obroka i/ili volontiranja."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -2270,7 +2270,7 @@ msgid ""
 "each person</strong> - check the \"Register multiple participants\" option, "
 "AND include a profile in this registration form which <strong>includes First"
 " Name and Last Name fields</strong>."
-msgstr ""
+msgstr "Štiklirajte ovu kućicu da biste dozvolili mogućnost da jedan korisnik registruje veći broj učesnika koristeći jednu email adresu. Međutim, ukoliko želite da se dodatni učesnici registruju, <strong>a da email adresa ne mora da se unosi zasebno za svaku osobu</strong> -  štiklirajte opciju \"Registruj više učesnika\", i u ovaj formular za registraciju uključite profil koji <strong>sadrži polja za unošenje Imena i Prezimena</strong>."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Duplicate Matching Rule"
@@ -2482,14 +2482,14 @@ msgid ""
 "Determine if the event is free or paid. For paid events, set the payment "
 "processor, fee level(s) and discounts. Give online registrants the option to"
 " 'pay later' (e.g. mail in a check, call in a credit card, etc.)."
-msgstr ""
+msgstr "Odlučite da li je ovaj događaj besplatan ili se naplaćuje. Za događaje koji se naplaćuju podesite Procesor uplate, nivo(e) kotizacije i sniženja. Omogućite učesnicima koji se registruju online da 'plate kasnije' (npr. čekom, kreditnom karticom, itd)."
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid ""
 "Determine whether an online registration page is available. If so, configure"
 " registration, confirmation and thank you page elements and confirmation "
 "email details."
-msgstr ""
+msgstr "Odredite da li je moguća online registracija. Ukoliko jeste, podesite elemente stranica za registraciju, potvrdu i zahvalnost i detalje email-a za potvrdu."
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid ""
@@ -2924,7 +2924,7 @@ msgid ""
 "Update field values for each participant as needed. To set a field to the "
 "same value for ALL rows, enter that value for the first participation and "
 "then click the <strong>Copy icon</strong> (next to the column title)."
-msgstr ""
+msgstr "Po potrebi ažurirajte vrednosti za svakog učesnika. Da biste postavili istu vrednost polja za sve redove, unesite vrednost za prvo učešće i zatim kliknite na <strong>Ikonicu za kopiranje</strong> (pored naslova reda)."
 
 #: templates/CRM/Event/Form/Task/Batch.tpl
 msgid ""
@@ -2982,7 +2982,7 @@ msgstr "Datum događaja"
 msgid ""
 "NOTE: Contacts selected on the search results are not relevant here; all "
 "contacts that meet the following criteria will be in the group."
-msgstr ""
+msgstr "Beleška: Kontakti obeleženi u rezultatima pretrage ovde nisu relevantni; svi kontakti koji ispunjavaju sledeće kriterijume biće u grupi."
 
 #: templates/CRM/Event/Form/Task.tpl
 msgid "Number of selected participants: %1"
@@ -3013,7 +3013,7 @@ msgid ""
 " found in the CiviEvent section of the Administer CiviCRM screen. You can "
 "also import Fee Level, Registration Date and any other standard or custom "
 "Participant fields."
-msgstr ""
+msgstr "Podrazumevana Uloga učesnika za događaj (obično Učesnik) biće dodeljena ukoliko ne uključite vrednost za uloge. Važeće vrednosti za Status i Uloge možete pronaći u odelju CiviEvent na ekranu Administriraj CiviCRM. Takođe možete importovati Nivoe kotizacije, Datum registracije i bilo koja druga standardna ili prilagođena polja za Učesnike."
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid "Contact Records for Event Participants"
@@ -3100,14 +3100,14 @@ msgstr "Fajlovi za import moraju biti u CSV ('comma-separated-values') formatu i
 msgid ""
 "Select 'Individual' if you are importing event participation data for "
 "individual persons."
-msgstr ""
+msgstr "Odaberite 'Pojedinac' ukoliko importujete podatke o učešću na događaju za pojedince."
 
 #: templates/CRM/Event/Import/Form/DataSource.tpl
 msgid ""
 "Select 'Organization' or 'Household' if you are importing event "
 "participation data for contacts of that type. (NOTE: Some built-in contact "
 "types may not be enabled for your site.)"
-msgstr ""
+msgstr "Odaberite 'Organizacija' ili 'Domaćinstvo' ukoliko importujete podatke o učešću na događaju za kontakte ovog tipa. (Beleška: Neki od ugrađenih tipova kontakata možda nisu aktivirani za vaš sajt.)"
 
 #: templates/CRM/Event/Import/Form/Preview.tpl
 msgid ""
