--- a/po/fr_FR/menu.po
+++ b/po/fr_FR/menu.po
@@ -6,12 +6,13 @@
 # AlbertFR <albert.bruc.ab@gmail.com>, 2015
 # AlbertFR <albert.bruc.ab@gmail.com>, 2015
 # SR71 <ben.alard@gmail.com>, 2012
+# Brodziak jean jacques <jj.brodziak@cpe31.com>, 2017
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2012
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # F Boot <f2boot@gmail.com>, 2012
 # jean-guy avelin <jga974@gmail.com>, 2013
-# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
+# Brodziak jean jacques <jj.brodziak@cpe31.com>, 2016
 # Nicolas <nicolas@cividesk.com>, 2013
 # Paul Caranton <caranton.paul@gmail.com>, 2015
 # Peter <webmaster@lebouclier.com>, 2016
@@ -27,8 +28,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-16 00:37+0000\n"
-"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
+"PO-Revision-Date: 2017-02-02 16:11+0000\n"
+"Last-Translator: Brodziak jean jacques <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -900,7 +901,7 @@ msgstr "Blog CiviCRM"
 
 msgctxt "menu"
 msgid "CiviCRM Getting Started"
-msgstr ""
+msgstr "Démarrer CiviCRM"
 
 msgctxt "menu"
 msgid "Case Dashlet"
@@ -1355,7 +1356,7 @@ msgstr "Nouvelles de CiviCRM"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Getting Started"
-msgstr ""
+msgstr "Commencé"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1635,7 +1636,7 @@ msgstr "Connections"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Outbound Email (SMTP/Sendmail)"
-msgstr "Courrier sortant"
+msgstr "Courrier sortant (SMTP/Sendmail)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2174,7 +2175,7 @@ msgstr "Moyens de paiement"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Close Accounting Period"
-msgstr ""
+msgstr "Clôture de la période comptable"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
@@ -2183,23 +2184,23 @@ msgstr "Configurer CKEditor"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM Resources"
-msgstr ""
+msgstr "Ressources CiviCRM"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
-msgstr ""
+msgstr "Fusionner les contacts en double par lot"
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
-msgstr ""
+msgstr "Insérer du contenu CiviCRM"
 
 msgctxt "menu"
 msgid "Self-service Registration Update"
-msgstr ""
+msgstr "Mise à jour d'enregistrement en ligne"
 
 msgctxt "menu"
 msgid "Self-service Registration Transfer"
-msgstr ""
+msgstr "Transfert d'inscription en ligne"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2239,11 +2240,11 @@ msgstr "Statistiques d'activité par type/date"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Detail"
-msgstr ""
+msgstr "Détail de promesse de don"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "List of pledges including amount pledged, pledge status, next payment date, "
 "balance due, total amount paid etc."
-msgstr ""
+msgstr "Synthèse des promesses de dons comprenant le montant promis, le statut de la promesse, le paiement suivant, solde échu, le montant total payé, etc."
