--- a/po/id_ID/member.po
+++ b/po/id_ID/member.po
@@ -4,13 +4,14 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Fery Setiawan <gembelweb@gmail.com>, 2015
+# Justin Snyder <jsnyder83@gmail.com>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-02 08:05+0000\n"
+"Last-Translator: Justin Snyder <jsnyder83@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -938,7 +939,7 @@ msgstr "Perbaharui Keanggotaan yang ada"
 
 #: CRM/Member/Import/Form/MapField.php
 msgid "(OR Membership ID if update mode.)"
-msgstr "ATAU ID Keanggotaan jika suasana pembaharuan.)"
+msgstr "(ATAU ID Keanggotaan jika suasana pembaharuan.)"
 
 #: CRM/Member/Import/Form/MapField.php
 msgid "Duplicate Import Membership Mapping Name"
