--- a/po/id_ID/drupal-civicrm.po
+++ b/po/id_ID/drupal-civicrm.po
@@ -4,13 +4,14 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Fery Setiawan <gembelweb@gmail.com>, 2015
+# Justin Snyder <jsnyder83@gmail.com>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-12-09 04:00+0000\n"
-"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
+"PO-Revision-Date: 2017-02-02 08:02+0000\n"
+"Last-Translator: Justin Snyder <jsnyder83@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2227,7 +2228,7 @@ msgstr "Dalam bentuk YYYY."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "%title month"
-msgstr "%title month"
+msgstr "%title bulan"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "In the form of MM (01 - 12)."
