--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -29,8 +29,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-03 01:22+0000\n"
-"Last-Translator: Mathieu Lu <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-04 05:27+0000\n"
+"Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -10058,7 +10058,7 @@ msgstr "Change le type de champ"
 
 #: CRM/Custom/Form/ChangeFieldType.php
 msgid "Input type of custom field '%1' has been successfully changed to '%2'."
-msgstr "Le type d'entrée personnalisé '%1' a bien été changé en '%2'?"
+msgstr "Le type de champ personnalisé « %1 » a été changé pour « %2 »."
 
 #: CRM/Custom/Form/ChangeFieldType.php
 msgid "Field Type Changed"
@@ -19450,7 +19450,7 @@ msgstr "Url de l'API:"
 
 #: templates/CRM/SMS/Page/Provider.tpl
 msgid "no parameters"
-msgstr "as de paramètres"
+msgstr "pas de paramètres"
 
 #: templates/CRM/SMS/Page/Provider.tpl
 msgid "Add SMS Provider"
@@ -24137,7 +24137,7 @@ msgstr "Résumé de contact"
 
 #: xml/templates/message_templates/uf_notify_subject.tpl
 msgid "Submitted by %1"
-msgstr "Soumis par %1"
+msgstr "soumis par %1"
 
 #: xml/templates/message_templates/uf_notify_text.tpl
 msgid "Submitted For:"
@@ -25128,7 +25128,7 @@ msgstr "Contact - fusionner"
 
 #: CRM/Contact/Task.php
 msgid "Map contacts"
-msgstr ""
+msgstr "Cartographier les contacts"
 
 #: CRM/Contact/Task.php
 msgid "Register participants for event"
