--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Đorđe Kolaković <djordje@catalystbalkans.org>, 2016-2017
+# Marinela Panić <marinela@catalystbalkans.org>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-31 13:33+0000\n"
-"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-02-03 15:46+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2782,7 +2783,7 @@ msgstr ""
 msgid ""
 "Use this form to submit a new contribution on behalf of %1. <strong>A %2 "
 "transaction will be submitted</strong> using the selected payment processor."
-msgstr "Upotrebite ovaj formular kako donirali u ime %1. <strong>Transakcija %2 će biti poslata</strong> pomoću odabranog procesora uplate."
+msgstr "Upotrebite ovaj formular kako biste donirali u ime %1. <strong>Transakcija %2 će biti poslata</strong> pomoću odabranog procesora uplate."
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid ""
