po: update po/fr_CA/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -29,7 +29,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-04 05:27+0000\n"
+"PO-Revision-Date: 2017-02-04 14:50+0000\n"
 "Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -24842,7 +24842,7 @@ msgstr "Enregistrer dans le dossier"
 
 #: CRM/Activity/Tokens.php
 msgid "Activity Date-Time"
-msgstr ""
+msgstr "Date et heure de l'activité"
 
 #: CRM/Contact/ActionMapping.php
 msgid "Date Field"
