po: update po/hr/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hr/event.po
+++ b/po/hr/event.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Jurica Mikulić <jurica.mikulic@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-04 18:04+0000\n"
+"Last-Translator: Jurica Mikulić <jurica.mikulic@gmail.com>\n"
 "Language-Team: Croatian (http://www.transifex.com/civicrm/civicrm/language/hr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,102 +20,102 @@ msgstr ""
 #: CRM/Event/BAO/Event.php CRM/Event/Cart/Form/Checkout/Payment.php
 #: CRM/Event/Form/Participant.php CRM/Event/Form/ParticipantFeeSelection.php
 msgid "confirmation"
-msgstr ""
+msgstr "potvrda"
 
 #: CRM/Event/BAO/Event.php
 msgid "Cannot find participant ID"
-msgstr ""
+msgstr "Nije moguće naći ID sudionika"
 
 #: CRM/Event/BAO/Participant.php
 msgid "This event is full."
-msgstr ""
+msgstr "Ovaj događaj je pun."
 
 #: CRM/Event/BAO/Participant.php
 msgid "- Participant Fields -"
-msgstr ""
+msgstr "- polja sudionika -"
 
 #: CRM/Event/BAO/Participant.php
 msgid "Participant Note"
-msgstr ""
+msgstr "Bilješka o sudioniku"
 
 #: CRM/Event/BAO/Participant.php
 msgid "Participant Status Id"
-msgstr ""
+msgstr "ID statusa sudionika"
 
 #: CRM/Event/BAO/Participant.php
 msgid "Participant Role Id"
-msgstr ""
+msgstr "ID uloge sudionika"
 
 #: CRM/Event/BAO/Participant.php
 msgid ""
 "Participant status has been updated to '%1'. An email has been sent to %2."
-msgstr ""
+msgstr "Status sudionika postavljen je u '%1'. Email je poslan %2."
 
 #: CRM/Event/BAO/Participant.php
 msgid ""
 "This event currently has the maximum number of participants registered (%1)."
 " However, you can still override this limit and register additional "
 "participants using this form."
-msgstr ""
+msgstr "Ovaj događaj trenutno ima maksimalan broj registriranih sudionika (%1). Unatoč tome, ovo ograničenje možete nadjačati i registrirati dodatne sudionike koristeći ovaj formular."
 
 #: CRM/Event/BAO/Participant.php
 msgid ""
 "There are %2 people currently on the waiting list for this event. You can <a"
 " href='%1'>view waitlisted registrations here</a>, or you can continue and "
 "register additional participants using this form."
-msgstr ""
+msgstr "Trenutno je na listi čekanja za ovaj događaj %2 osoba. Možete <a href='%1'>pogledati registracije u listi čekanja ovdje</a>, ili možete nastaviti i registrirati dodatne sudionike koristeći ovaj formular."
 
 #: CRM/Event/BAO/Query.php
 msgid "Include Repeating Events"
-msgstr ""
+msgstr "Uključi ponavljajuće događaje"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is a Test"
-msgstr ""
+msgstr "Sudionik je test"
 
 #: CRM/Event/BAO/Query.php CRM/Event/DAO/Participant.php
 msgid "Fee level"
-msgstr ""
+msgstr "Besplatna razina"
 
 #: CRM/Event/BAO/Query.php
 msgid "Include participants from all events in the %1 series"
-msgstr ""
+msgstr "Uključi sudionike iz svih gogađaja u %1 seriji"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is a Test?"
-msgstr ""
+msgstr "Sudionik je test?"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is Pay Later?"
-msgstr ""
+msgstr "Sudionik je Plati Kasnije?"
 
 #: CRM/Event/Cart/BAO/Cart.php
 msgid "There was an error creating an event cart"
-msgstr ""
+msgstr "Došlo je do pogreške pri kreiranju košarice s događajima"
 
 #: CRM/Event/Cart/BAO/Cart.php
 msgid "Could not find cart matching %1"
-msgstr ""
+msgstr "Ne mogu naći košaricu koja odgovara %1"
 
 #: CRM/Event/Cart/BAO/EventInCart.php
 msgid "There was an error creating an event_in_cart"
-msgstr ""
+msgstr "Došlo je do greške pri kreiranju event_in_cart"
 
 #: CRM/Event/Cart/BAO/MerParticipant.php
 msgid "There was an error creating a cart participant"
-msgstr ""
+msgstr "Došlo je do greške pri kreiranju košarice sudinika"
 
 #: CRM/Event/Cart/Form/Cart.php
 msgid "Online Registration for %1"
-msgstr ""
+msgstr "Online registracija za %1"
 
 #: CRM/Event/Cart/Form/Checkout/ParticipantsAndPrices.php
 msgid "If you have a discount code, enter it here"
-msgstr ""
+msgstr "Ako imate kod za popust, upišite ga ovdje"
 
 #: CRM/Event/Cart/Form/Checkout/ParticipantsAndPrices.php
 msgid "Select at least one option from Price Levels."
-msgstr ""
+msgstr "Odaberite barem jednu opciju iz Price Levels"
 
 #: CRM/Event/Cart/Form/Checkout/ParticipantsAndPrices.php
 msgid ""
