po: update po/sk_SK/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sk_SK/install.po
+++ b/po/sk_SK/install.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Radek Hrančík <radek.hrancik@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-06 00:52+0000\n"
+"Last-Translator: Radek Hrančík <radek.hrancik@gmail.com>\n"
 "Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,25 +19,25 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Please correct your install location"
-msgstr ""
+msgstr "Huups! Opravte prosím umiestnenie vašej inštalácie"
 
 #: install/index.php
 msgid ""
 "Please untar (uncompress) your downloaded copy of CiviCRM in the "
 "<strong>%1</strong> directory below your Drupal root directory."
-msgstr ""
+msgstr "Rozbaľte (dekomprimujte) prosím vami stiahnutú kópiu CiviCRM v adresári <strong>%1</strong> pod koreňovým adresárom Drupal-u."
 
 #: install/index.php
 msgid "Oops! CiviCRM is already installed"
-msgstr ""
+msgstr "Huups! CiviCRM je už nainštalované"
 
 #: install/index.php
 msgid "[your Drupal root directory]"
-msgstr ""
+msgstr "[váš koreňový adresár Drupal-u]"
 
 #: install/index.php
 msgid "Installation Guide"
-msgstr ""
+msgstr "Inštalačná príručka"
 
 #: install/index.php
 msgid ""
@@ -45,73 +46,73 @@ msgid ""
 "<strong>civicrm.settings.php</strong> - from <strong>%1</strong>.</li><li>To"
 " <strong>upgrade an existing installation</strong>, <a href='%2'>refer to "
 "the online documentation</a>.</li></ul>"
-msgstr ""
+msgstr "CiviCRM už bolo nainštalované. <ul><li>Pre <strong>prepísanie jestvujúcej inštalácie</strong>, musíte zmazať, alebo premenovať aktuálny súbor s nastaveniami CiviCRM - <strong>civicrm.settings.php</strong> - z <strong>%1</strong>.</li><li>Pre <strong>aktualizáciu jestvujúcej inštalácie</strong>, <a href='%2'>postupujte podľa online dokumentácie</a>.</li></ul>"
 
 #: install/index.php
 msgid "Oops! Incorrect CiviCRM version"
-msgstr ""
+msgstr "Huups! Nesprávna verzia CiviCRM"
 
 #: install/index.php
 msgid "This installer can only be used for the Drupal version of CiviCRM."
-msgstr ""
+msgstr "Tento inštalátor je možné použiť len na verziu CiviCRM pre Drupal."
 
 #: install/index.php
 msgid "Oops! Incorrect Drupal version"
-msgstr ""
+msgstr "Huups! Nesprávna verzia Drupal-u"
 
 #: install/index.php
 msgid ""
 "This version of CiviCRM can only be used with Drupal 6.x or 7.x. Please "
 "ensure that '%1' exists if you are running Drupal 7.0 and over."
-msgstr ""
+msgstr "Táto verzia CiviCRM môže byť použitá len s Drupal-om 6.x alebo 7.x. Ak bežíte na Drupal-e 7.0 a vyššom, uistite sa prosím, že '%1' jestvuje."
 
 #: install/index.php
 msgid "This installer can only be used for the WordPress version of CiviCRM."
-msgstr ""
+msgstr "Tento inštalátor može byť použitý len na verziu CiviCRM pre WordPress."
 
 #: install/index.php
 msgid "PHP Configuration"
-msgstr ""
+msgstr "Konfigurácia PHP"
 
 #: install/index.php
 msgid "MySQL support"
-msgstr ""
+msgstr "Podpora MySQL"
 
 #: install/index.php
 msgid "MySQL support not included in PHP."
-msgstr ""
+msgstr "PHP neobsahuje podporu pre MySQL."
 
 #: install/index.php install/template.html
 msgid "MySQL %1 Configuration"
-msgstr ""
+msgstr "MySQL %1 konfigurácia"
 
 #: install/index.php
 msgid "Does the server exist?"
-msgstr ""
+msgstr "Jestvuje tento server?"
 
 #: install/index.php
 msgid "Can't find the a MySQL server on '%1'."
-msgstr ""
+msgstr "Nemožno nájsť MySQL server na '%1'."
 
 #: install/index.php
 msgid "Are the access credentials correct?"
-msgstr ""
+msgstr "Sú prístupové oprávnenia správne?"
 
 #: install/index.php
 msgid "That username/password doesn't work"
-msgstr ""
+msgstr "Toto používateľské meno/heslo nefunguje"
 
 #: install/index.php
 msgid "MySQL version at least %1"
-msgstr ""
+msgstr "MySQL verzia aspoň %1"
 
 #: install/index.php
 msgid "MySQL version %1 or higher is required, you are running MySQL %2."
-msgstr ""
+msgstr "Je vyžadovaná MySQL verzia %1 alebo vyššia, u vás beží MySQL %2."
 
 #: install/index.php
 msgid "MySQL %1"
-msgstr ""
+msgstr "MySQL %1"
 
 #: install/index.php
 msgid "Is auto_increment_increment set to 1"
@@ -125,13 +126,13 @@ msgstr ""
 
 #: install/index.php
 msgid "Is the provided database name valid?"
-msgstr ""
+msgstr "Je uvedený názov databázy platný?"
 
 #: install/index.php
 msgid ""
 "The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
 " as characters in the name."
-msgstr ""
+msgstr "Uvedený názov databázy nie je platný. V názve prosím použite len znaky 0-9, a-z, A-Z a _."
 
 #: install/index.php
 msgid "Does MySQL thread_stack meet minimum (%1k)"
@@ -186,15 +187,15 @@ msgstr ""
 
 #: install/index.php
 msgid "PHP5 installed"
-msgstr ""
+msgstr "Nainštalované PHP5"
 
 #: install/index.php
 msgid "PHP version %1"
-msgstr ""
+msgstr "PHP verzia %1"
 
 #: install/index.php
 msgid "File permissions"
-msgstr ""
+msgstr "Oprávnenia súboru"
 
 #: install/index.php
 msgid "Does the webserver know where files are stored?"
@@ -234,75 +235,75 @@ msgstr ""
 
 #: install/index.php
 msgid "Recognised webserver"
-msgstr ""
+msgstr "Rozpoznaný webserver"
 
 #: install/index.php
 msgid ""
 "You seem to be using an unsupported webserver. The server variables "
 "SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME need to be set."
-msgstr ""
+msgstr "Zdá sa, že používate nepodporovaný webserver. Je potrebné, aby boli nastavené serverové premenné SCRIPT_NAME, HTTP_HOST a SCRIPT_FILENAME."
 
 #: install/index.php
 msgid "JSON support"
-msgstr ""
+msgstr "Podpora JSON"
 
 #: install/index.php
 msgid "JSON support not included in PHP."
-msgstr ""
+msgstr "PHP neobsahuje podporu pre JSON."
 
 #: install/index.php
 msgid "XCache compatibility"
-msgstr ""
+msgstr "XCache kompatibilita"
 
 #: install/index.php
 msgid ""
 "XCache is installed and there are known compatibility issues between XCache "
 "and CiviCRM. Consider using an alternative PHP caching mechanism or disable "
 "PHP caching altogether."
-msgstr ""
+msgstr "Je nainštalovaná XCache a sú známe problémy s kompatibilitou medzi XCache a CiviCRM. Zvážte použitie alternatívneho mechanizmu vyrovnávacej pamäte pre PHP, alebo vypnite vyrovnávaciu pamäť úplne."
 
 #: install/index.php
 msgid "Memory allocated (PHP config option 'memory_limit')"
-msgstr ""
+msgstr "Alokovaná pamäť (PHP konfiguračná voľba 'memory_limit')"
 
 #: install/index.php
 msgid ""
 "CiviCRM needs a minimum of %1 MB allocated to PHP, but recommends %2 MB."
-msgstr ""
+msgstr "CiviCRM potrebuje aby bolo pre PHP alokovaných najmenej %1 MB, ale odporúča sa %2 MB."
 
 #: install/index.php
 msgid "You only have %1 allocated"
-msgstr ""
+msgstr "Máte alokovaných len %1"
 
 #: install/index.php
 msgid ""
 "We can't determine how much memory you have allocated. Install only if "
 "you're sure you've allocated at least %1 MB."
-msgstr ""
+msgstr "Nedokážeme určiť, ako veľa pamäte máte alokovanej. Inštalujte len ak ste si istí, že máte alokovaných najmenej %1 MB."
 
 #: install/index.php
 msgid "The following problems are preventing me from installing CiviCRM:"
-msgstr ""
+msgstr "Nasledujúce problémy mi bránia v inštalácii CiviCRM:"
 
 #: install/index.php
 msgid ""
 "You need PHP version %1 or later, only %2 is installed. Please upgrade your "
 "server, or ask your web-host to do so."
-msgstr ""
+msgstr "Potrebujete PHP verziu %1 alebo neskoršiu, máte však nainštalovanú len %2. Aktualizujte prosím váš vebserver, alebo o to požiadajte vášho poskytovateľa webhostingu."
 
 #: install/index.php
 msgid ""
 "PHP version %1 is not supported. PHP version earlier than %2 is required. "
 "You might want to downgrade your server, or ask your web-host to do so."
-msgstr ""
+msgstr "PHP verzia %1 nie je podporovaná. Je vyžadovaná verzia nižšia ako %2. Možno budete chcieť urobiť downgrade vášho serveru, alebo o to požiadať vášho poskytovateľa webhostingu."
 
 #: install/index.php
 msgid "file '%1' not found"
-msgstr ""
+msgstr "súbor '%1' nenájdený"
 
 #: install/index.php
 msgid "file '%1' found"
-msgstr ""
+msgstr "súbor '%1' nájdený"
 
 #: install/index.php
 msgid ""
@@ -454,11 +455,11 @@ msgstr ""
 
 #: install/template.html
 msgid "CiviCRM Installer"
-msgstr ""
+msgstr "Inštalátor CiviCRM"
 
 #: install/template.html
 msgid "Version %1"
-msgstr ""
+msgstr "Verzia %1"
 
 #: install/template.html
 msgid ""
@@ -481,23 +482,23 @@ msgstr ""
 
 #: install/template.html
 msgid "You're ready to install!"
-msgstr ""
+msgstr "Ste pripravení na inštaláciu"
 
 #: install/template.html
 msgid "Check Requirements and Install CiviCRM"
-msgstr ""
+msgstr "Overiť požiadavky a inštalovať CiviCRM"
 
 #: install/template.html
 msgid "Installing CiviCRM..."
-msgstr ""
+msgstr "Inštaluje sa CiviCRM..."
 
 #: install/template.html
 msgid "(this will take a few minutes)"
-msgstr ""
+msgstr "(zaberie to niekoľko minút)"
 
 #: install/template.html
 msgid "Language and Region Settings"
-msgstr ""
+msgstr "Nastavenia jazyka a regiónu"
 
 #: install/template.html
 msgid ""
@@ -506,19 +507,19 @@ msgid ""
 "in that language. The initial configuration of the basic data will also be "
 "set to that language (ex: individual prefixes, suffixes, activity types, "
 "etc.). <a href=\"%1\">Learn more about using CiviCRM in other languages.</a>"
-msgstr ""
+msgstr "CiviCRM bolo preložené do mnohých jazykov, vďaka komunite jeho prekladateľov. Je možné, že inštalátor bude dostupný aj v inom, vami zvolenom jazyku. Počiatočná konfigurácia základných údajov bude takisto nastavená na tento jazyk (napr.: tituly osôb pred a za menom, typy aktivít, atď.). <a href=\"%1\">Naštudujte si viac o použití CiviCRM v iných jazykoch.</a>"
 
 #: install/template.html
 msgid "Language of basic data:"
-msgstr ""
+msgstr "Jazyk základných údajov:"
 
 #: install/template.html
 msgid "Change language"
-msgstr ""
+msgstr "Zmeniť jazyk"
 
 #: install/template.html
 msgid "Database Version and Connection Settings"
-msgstr ""
+msgstr "Verzia databázy a nastavenia spojenia"
 
 #: install/template.html
 msgid ""
@@ -542,65 +543,65 @@ msgstr ""
 
 #: install/template.html
 msgid "CiviCRM Database Settings"
-msgstr ""
+msgstr "Nastavenia databázy CiviCRM"
 
 #: install/template.html
 msgid "MySQL server:"
-msgstr ""
+msgstr "MySQL server:"
 
 #: install/template.html
 msgid "MySQL username:"
-msgstr ""
+msgstr "MySQL používateľské meno:"
 
 #: install/template.html
 msgid "MySQL password:"
-msgstr ""
+msgstr "MySQL heslo:"
 
 #: install/template.html
 msgid "MySQL database:"
-msgstr ""
+msgstr "MySQL databáza:"
 
 #: install/template.html
 msgid "Drupal Database Settings"
-msgstr ""
+msgstr "Nastavenia databázy Drupal-u"
 
 #: install/template.html
 msgid "Other Settings"
-msgstr ""
+msgstr "Ostatné nastavenia"
 
 #: install/template.html
 msgid "Re-check requirements"
-msgstr ""
+msgstr "Znovu overiť požiadavky"
 
 #: install/template.html
 msgid "CiviCRM Database Details"
-msgstr ""
+msgstr "Podrobnosti databázy CiviCRM"
 
 #: install/template.html
 msgid "Drupal Database Details"
-msgstr ""
+msgstr "Podrobnosti databázy Drupal-u"
 
 #: install/template.html
 msgid "Requirements"
-msgstr ""
+msgstr "Požiadavky"
 
 #: install/index.php
 msgid "[your Backdrop root directory]"
-msgstr ""
+msgstr "[váš koreňový adresár Backdrop-u]"
 
 #: install/index.php
 msgid "This installer can only be used for the Backdrop version of CiviCRM."
-msgstr ""
+msgstr "Tento inštalátor môže byť použitý len na verziu CiviCRM pre Backdrop."
 
 #: install/index.php
 msgid "Oops! Incorrect Backdrop version"
-msgstr ""
+msgstr "Huups! Nesprávna verzia Backdrop-u"
 
 #: install/index.php
 msgid ""
 "This version of CiviCRM can only be used with Backdrop 1.x. Please ensure "
 "that '%1' exists if you are running Backdrop 1.0 and over."
-msgstr ""
+msgstr "Táto verzia CiviCRM môže byť použitá len s Backdrop 1.x. Ak bežíte na Backdrop 1.0 a vyššom, uistite sa prosím, že '%1' jestvuje."
 
 #: install/index.php
 msgid ""
@@ -612,8 +613,8 @@ msgstr ""
 
 #: install/template.html
 msgid "Backdrop Database Settings"
-msgstr ""
+msgstr "Nastavenia databázy Backdrop-u"
 
 #: install/template.html
 msgid "Backdrop Database Details"
-msgstr ""
+msgstr "Podrobnosti databázy Backdrop-u"
