--- a/po/sk_SK/drupal-civicrm.po
+++ b/po/sk_SK/drupal-civicrm.po
@@ -5,13 +5,14 @@
 # Translators:
 # Limexis <elfino@azet.sk>, 2013-2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Radek Hrančík <radek.hrancik@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-03-13 21:28+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: Slovak (http://www.transifex.com/projects/p/civicrm/language/sk/)\n"
+"PO-Revision-Date: 2017-02-06 01:04+0000\n"
+"Last-Translator: Radek Hrančík <radek.hrancik@gmail.com>\n"
+"Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -38,12 +39,12 @@ msgstr ""
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Rule ID !1 was successfully deleted."
-msgstr ""
+msgstr "ID pravidla !1 bol úspešne zmazaný."
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Rule ID"
-msgstr ""
+msgstr "ID pravidla"
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
@@ -136,17 +137,17 @@ msgstr "Status účastníka"
 #: drupal/modules/views/civicrm/civicrm_handler_filter_payment_instrument.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_contribution_type.inc
 msgid "Contribution Type"
-msgstr ""
+msgstr "Typ príspevku"
 
 #: drupal/modules/views/civicrm.views.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_contribution_page.inc
 msgid "Contribution Page"
-msgstr ""
+msgstr "Stránka príspevku"
 
 #: drupal/modules/views/civicrm.views.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_contribution_status.inc
 msgid "Contribution Status"
-msgstr ""
+msgstr "Stav príspevku"
 
 #: drupal/modules/views/civicrm.views.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_activity_type.inc
@@ -162,7 +163,7 @@ msgstr "Stav aktivity"
 #: drupal/modules/views/civicrm.views.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_priority.inc
 msgid "Priority"
-msgstr ""
+msgstr "Priorita"
 
 #: drupal/modules/views/civicrm.views.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_membership_type.inc
@@ -226,17 +227,17 @@ msgstr ""
 #: drupal/modules/views/civicrm/civicrm_handler_filter_location.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_location_type.inc
 msgid "Location type"
-msgstr ""
+msgstr "Typ umiestnenia"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_event.inc
 #: drupal/modules/views/civicrm/civicrm_handler_field_event_link.inc
 msgid "Link to Event Page"
-msgstr ""
+msgstr "Odkaz na stránku podujatia"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_event.inc
 #: drupal/modules/views/civicrm/civicrm_handler_field_event_link.inc
 msgid "Link to Event Configuration"
-msgstr ""
+msgstr "Odkaz na konfiguráciu podujatia"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_event.inc
 #: drupal/modules/views/civicrm/civicrm_handler_field_event_link.inc
@@ -248,12 +249,12 @@ msgstr ""
 #: drupal/modules/views/civicrm/civicrm_handler_field_mail.inc
 #: drupal/modules/views/civicrm/civicrm_handler_field_email.inc
 msgid "Link this field"
-msgstr ""
+msgstr "Prepojiť toto pole"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_mail.inc
 #: drupal/modules/views/civicrm/civicrm_handler_field_email.inc
 msgid "No link"
-msgstr ""
+msgstr "Žiaden odkaz"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_mail.inc
 #: drupal/modules/views/civicrm/civicrm_handler_field_email.inc
@@ -280,7 +281,7 @@ msgstr ""
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 #: drupal/modules/civicrm_engage/Engage/Report/Form/CallList.php
 msgid "Sex"
-msgstr ""
+msgstr "Pohlavie"
 
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 #: drupal/modules/civicrm_engage/Engage/Report/Form/CallList.php
@@ -315,7 +316,7 @@ msgstr ""
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Task/VoterReservation.php
 msgid "- select -"
-msgstr ""
+msgstr "- zvoliť -"
 
 #: CRM/Core/Permission.php
 msgid "add contacts"
@@ -331,7 +332,7 @@ msgstr "upraviť všetky kontakty"
 
 #: CRM/Core/Permission.php
 msgid "delete contacts"
-msgstr ""
+msgstr "zmazať kontakty"
 
 #: CRM/Core/Permission.php
 msgid "access deleted contacts"
@@ -2437,7 +2438,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_group_title.inc
 msgid "Group Name"
-msgstr ""
+msgstr "Názov skupiny"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_contact_link.inc
 msgid "Link this field to its CiviCRM Contact"
@@ -2461,7 +2462,7 @@ msgstr "Kontakty"
 
 #: drupal/modules/civicrm_cck/civicrm_cck.module
 msgid "CiviCRM Contact"
-msgstr ""
+msgstr "CiviCRM Kontakt"
 
 #: drupal/modules/civicrm_cck/civicrm_cck.module
 msgid "Reference a CiviCRM contact."
