--- a/po/sk_SK/extension.po
+++ b/po/sk_SK/extension.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Radek Hrančík <radek.hrancik@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2017-02-05 23:03+0000\n"
+"Last-Translator: Radek Hrančík <radek.hrancik@gmail.com>\n"
 "Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +19,7 @@ msgstr ""
 
 #: CRM/Extension/Browser.php CRM/Extension/Downloader.php
 msgid "Directory Unwritable"
-msgstr ""
+msgstr "Do adresára sa nedá zapisovať"
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -36,7 +37,7 @@ msgstr ""
 
 #: CRM/Extension/Browser.php
 msgid "Connection Error"
-msgstr ""
+msgstr "Chyba spojenia"
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -49,7 +50,7 @@ msgstr ""
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
-msgstr ""
+msgstr "Neplatný základný adresár"
 
 #: CRM/Extension/Container/Basic.php
 msgid "An extension container has been defined with a blank directory."
@@ -57,7 +58,7 @@ msgstr ""
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base URL"
-msgstr ""
+msgstr "Neplatná základná URL"
 
 #: CRM/Extension/Container/Basic.php
 msgid "An extension container has been defined with a blank URL."
@@ -71,7 +72,7 @@ msgstr ""
 
 #: CRM/Extension/Container/Basic.php
 msgid "Parse error in extension: %1"
-msgstr ""
+msgstr "Chyba spracovania v rozšírení: %1"
 
 #: CRM/Extension/Container/Default.php
 msgid ""
@@ -119,7 +120,7 @@ msgstr ""
 
 #: CRM/Extension/Downloader.php
 msgid "Installation Error"
-msgstr ""
+msgstr "Chyba inštalácie"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension to %1."
