--- a/po/sk_SK/event.po
+++ b/po/sk_SK/event.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Radek Hrančík <radek.hrancik@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-05 22:56+0000\n"
+"Last-Translator: Radek Hrančík <radek.hrancik@gmail.com>\n"
 "Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1362,7 +1363,7 @@ msgstr ""
 
 #: CRM/Event/Form/Task/Badge.php
 msgid "Make Name Badges"
-msgstr ""
+msgstr "Vyrobiť menovky"
 
 #: CRM/Event/Form/Task/Batch.php
 msgid "Batch Update for Events"
@@ -1628,7 +1629,7 @@ msgstr ""
 
 #: CRM/Event/Task.php
 msgid "Print Event Name Badges"
-msgstr ""
+msgstr "Vytlačiť menovky na podujatie"
 
 #: templates/CRM/Event/Cart/Form/Checkout/ConferenceEvents.tpl
 msgid "Choose Events For %1 (%2)"
@@ -2652,7 +2653,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "Print Name Badge"
-msgstr ""
+msgstr "Vytlačiť menovku"
 
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "Configure this event"
@@ -3825,7 +3826,7 @@ msgstr ""
 
 #: CRM/Event/Task.php
 msgid "Name badges - print"
-msgstr ""
+msgstr "Menovky - tlačiť"
 
 #: CRM/Event/Task.php
 msgid "PDF letter - print for participants"
